--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -671,8 +671,8 @@ exponentielle Komplexität $\mathcal{O}(2^n)$. Dazu ein Rechenbeispiel:
   der Menge der möglichen Lösungen auf die Bestimmung des diskreten Logarithmus hat. Angenommen, 
   aufgrund göttlicher Fügung, rät eine Person oder ein Algorithmus zu Beginn der Berechnung des
   diskreten Logarithmus zufällig eine Position $a$ auf dem Zahlenstrahl, die von der richtigen 
-  Lösung $b$ lediglich um $d$, den 10-Milliardstel Teil ($= 1/10^{10}$) von der gesamten Anzahl der 
-  möglichen Lösungen $\left| \Z_p^* \right| = (p-2)$, abweicht, um dann (zufällig) weiter in 
+  Lösung $b$ lediglich um den Betrag $d$ abweicht, den 10-Milliardstel Teil ($= 1/10^{10}$) von der gesamten Anzahl der 
+  möglichen Lösungen $\left| \Z_p^* \right| = (p-2)$, um dann (zufällig) weiter in 
   die richtige Richtung nach der Lösung zu suchen. Dann wären mit der obigen Rechenleistung von 10 
   Milliarden speziellen Prozessoren noch rund 14 Jahre nötig, um die richtige Lösung $b$ zu 
   bestimmen. Man wüsste also auch erst nach 14 Jahren, dass man ''sehr gut'' geraten hat und dann wurden mit dem zufällig erratenen Schlüssel vermutlich nicht die begehrten Atomkodes des Gegners sondern womöglich nur eine unwichtige Einkaufsliste verschlüsselt. Man kann also davon ausgehen, dass das Erraten der richtigen Lösung des diskreten Logarithmus kaum funktioniert.
