Fügt Verweis auf die Implemententation hinzu.

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -599,6 +599,12 @@ m_{\text{Alice}}$
 \section{Berechnung von diskreten Logarithmen}
 \label{sec:berechnung_von_diskreten_logarithmen}
 
+Falls sich der Leser oder die Leserin für eine Implemententation der hier
+vorgestellten Algorithmen interessiert, dann sei auf diese
+Webseite\footnote{\url{https://github.com/hutchison/Seminar_Public_Key_Kryptographie/blob/master/dlog.py}}
+verwiesen. Dort haben die Autoren alle benötigten Methoden zur Berechnung des
+diskreten Logarithmus in Python implementiert.
+
 \subsection{Naive Berechnung}
 \label{sub:naive_berechnung}
 
